# PredictiveTextEngine

./: CMakeLists.txt  README.txt  basicenglish.txt  c_test_main.cpp  example_training_data.txt  main.cpp
csharp/: T9PredictorInterface.cs
include/: LetterFrequencyTrie.h  LetterFrequencyTrieCBindings.h  Node.h
src/: LetterFrequencyTrie.cpp  LetterFrequencyTrieCBindings.cpp
